--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
+/* 
+MAIN COLOR: #087f5b
+GREY COLOR: #343a40
+
+*/
+
 * {
   margin: 0;
   padding: 0;
+
   box-sizing: border-box;
 }
 
@@ -17,6 +24,8 @@ FONT SIZE SYSTEM (px)
 /* ------------------------ */
 body {
   font-family: "Inter", sans-serif;
+  color: #343a40;
+  border-bottom: 8px solid #087f5b;
 }
 
 .container {
@@ -40,6 +49,34 @@ h2 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 80px;
+}
+
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  text-transform: uppercase;
+
+  font-weight: 500;
+
+  border-radius: 10px;
+  text-decoration: none;
+
+  display: inline-block;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #12b886;
+}
+
+.btn--big {
+  font-size: 20px;
+  padding: 16px 32px;
+}
+.btn--small {
+  font-size: 14px;
+  padding: 8px 12px;
 }
 
 /* ------------------------ */
@@ -98,6 +135,11 @@ img {
 
 /* TESTIMONIAL */
 .testimonial-section {
+  background-color: #12b886;
+  border-radius: 10px;
+  color: #fff;
+
+  padding: 24px;
 }
 
 .testimonial-box {
@@ -107,7 +149,7 @@ img {
 
 .testimonial-box h2 {
   margin-bottom: 24px;
-  font-size: 26px;
+  font-size: 25px;
 }
 
 .testimonial-text {
@@ -155,4 +197,5 @@ h3 {
 footer {
   margin-bottom: 48px;
   font-size: 12px;
+  color: #495057;
 }
