--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -62,7 +62,7 @@ h2 {
 
   font-weight: 500;
 
-  border-radius: 10px;
+  border-radius: 100px;
   text-decoration: none;
 
   display: inline-block;
@@ -91,7 +91,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 80px;
 }
 
 .header-text-box {
@@ -99,11 +99,12 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   /* 44 / 52 / 62 */
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
+  text-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 h1::first-letter {
@@ -120,6 +121,7 @@ h1::first-letter {
 
 img {
   width: 100%;
+  border-radius: 12px;
 }
 
 /* FEATURES */
@@ -128,7 +130,6 @@ img {
 
   width: 32px;
   height: 32px;
-  margin-bottom: 16px;
 }
 
 .features-title {
@@ -143,10 +144,10 @@ img {
 
 /* TESTIMONIAL */
 .testimonial-section {
-  background-color: #12b886;
+  background-color: #087f5b;
   border-radius: 10px;
   color: #fff;
-
+  border-radius: 12px;
   padding: 24px;
 }
 
@@ -165,11 +166,23 @@ img {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.6;
+  color: #e6fcf5;
 }
 
+.testimonial-author {
+  color: #c3fae8;
+}
 /* CHAIRS */
+.chair {
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1);
+}
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
 .chair-box {
-  padding: 24px;
+  padding: 32px;
+  border-radius: 12px;
 }
 
 h3 {
@@ -179,14 +192,15 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
   display: flex;
   align-items: center;
+
   gap: 12px;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 
 .chair-details li:last-child {
@@ -202,6 +216,7 @@ h3 {
 
 .chair-price {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   font-size: 20px;
 }
